fixed layout issues

--- a/src/assets/HealthyBabySite/ProfilePage/ProfilePage.css
+++ b/src/assets/HealthyBabySite/ProfilePage/ProfilePage.css
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: center;
   margin: 0 auto;
-  width: 28vw;
+  width: 35vw;
   min-height: 73vh;
   place-items: center;
 }
